# email_spam_identification

./: .gitignore  email_spam_identification.ipynb  email_spam_identification.py  pyproject.toml  readme.md
