[tool.poetry]
name = "spam-identification"
version = "0.1.0"
description = ""
authors = ["ToudertiHiba <hibatouderti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "2.1.1"
spacy = "^3.7.2"
scikit-learn = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
